src/test/ui/union/union-const-pat.stderr
error: cannot use unions in constant patterns
  --> $DIR/union-const-pat.rs:20:9
   |
LL |         C => {} //~ ERROR cannot use unions in constant patterns
   |         ^

error: aborting due to previous error

